Changed Title name And separated the results for easier CSS Closes #1, closes #2;

--- a/results.html
+++ b/results.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" href="./images/favicon.ico" />
-    <title>Document</title>
+    <title>Results Page</title>
   </head>
   <body>
-    <img src="./images/google.png" />
+    <img src="./images/google.png" alt="" />
     <form>
       <input type="text" />
       <input
@@ -44,7 +44,9 @@
     <! ::::::::::::::::::: -->
     <! -- NextResult -->
     <! ::::::::::::::::::: -->
-    <small>developer.mozilla.org</small>
+    <div>
+      <small>developer.mozilla.org</small>
+    </div>
     <h2>
       <a href="https://www.w3schools.com/js/">JavaScript | MDN</a>
     </h2>
@@ -68,7 +70,9 @@
     <! ::::::::::::::::::: -->
     <! -- NextResult -->
     <! ::::::::::::::::::: -->
-    <small>en.wikipedia.org</small>
+    <div>
+      <small>en.wikipedia.org</small>
+    </div>
     <h2>
       <a href="https://www.w3schools.com/js/">JavaScript | MDN</a>
     </h2>
