--- a/search.html
+++ b/search.html
@@ -8,7 +8,7 @@
     <title>GoogleSearch</title>
   </head>
   <body>
-    <img src="./images/google.png" />
+    <img src="./images/google.png" alt="" />
     <form>
       <input type="text" />
       <input
