--- a/search.html
+++ b/search.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="./pages_style.css" rel="stylesheet" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" href="./images/favicon.ico" />
     <title>GoogleSearch</title>
   </head>
-  <body>
-    <img src="./images/google.png" alt="" />
+  <body class="searchpage">
+    <img class="logo" src="./images/google.png" alt="" />
     <form>
-      <input type="text" />
+      <input class="search" type="search" />
       <input
+        class="but"
         type="button"
         onclick="location.href='./results.html';"
         value="Search"
