Correct the nav to div

--- a/results.html
+++ b/results.html
@@ -22,7 +22,7 @@
       </form>
     </nav>
     <!-- first result -->
-    <nav class="firstResult">
+    <div class="firstResult">
       <span class="results">37 Results</span>
       <div>
         <small>www.w3school.com</small>
@@ -96,6 +96,6 @@
           </li>
         </ul>
       </div>
-    </nav>
+    </div>
   </body>
 </html>
